--- a/5-day-gen-ai-colab.ipynb
+++ b/5-day-gen-ai-colab.ipynb
@@ -4,27 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "FWm6JdUmp5mj"
-   },
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# os.chdir(\"/content/5dgai-capstone/encoder\")\n",
-    "# !ls ../data/current\n",
-    "#!git pull"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "MpWpmx29pO7z",
-    "outputId": "09d4fb22-4639-4b3d-a6af-c3ef6534b5ab"
+    "id": "MpWpmx29pO7z"
    },
    "outputs": [],
    "source": [
@@ -66,31 +48,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "FmpvS0pOxw6u",
-    "outputId": "553f006e-d5e9-4091-ef4b-a682947fa04d"
+    "id": "FmpvS0pOxw6u"
    },
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from train_cnn import train\n",
     "\n",
-    "train(\"../data/current/train-5k.csv\", epochs=5)"
+    "train(\"../data/current/train-5k.csv\", epochs=50)\n",
+    "# train(\"../data/current/train-first-200k-from-1-mil.csv\", epochs=50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "knG0ZQCNEfka",
-    "outputId": "35711c21-2b98-4361-de20-26c34140a463"
+    "id": "knG0ZQCNEfka"
    },
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from test_cnn import test\n",
     "\n",
     "test(\"../data/current/test-200k.csv\")"
@@ -100,11 +79,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "195ygoWtpO73",
-    "outputId": "71bc2cd3-ae0f-475d-a85b-5949187453b3"
+    "id": "195ygoWtpO73"
    },
    "outputs": [],
    "source": [
@@ -113,7 +88,9 @@
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
   "colab": {
+   "gpuType": "T4",
    "provenance": []
   },
   "kaggle": {
@@ -126,8 +103,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3",
    "name": "python3"
   },
   "language_info": {
