--- a/5-day-gen-ai-kaggle.ipynb
+++ b/5-day-gen-ai-kaggle.ipynb
@@ -5,14 +5,7 @@
    "execution_count": null,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2025-04-20T22:22:03.758562Z",
-     "iopub.status.busy": "2025-04-20T22:22:03.758181Z",
-     "iopub.status.idle": "2025-04-20T22:22:04.073251Z",
-     "shell.execute_reply": "2025-04-20T22:22:04.071804Z",
-     "shell.execute_reply.started": "2025-04-20T22:22:03.758527Z"
-    }
+    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
    },
    "outputs": [],
    "source": [
@@ -51,36 +44,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-20T22:23:29.548534Z",
-     "iopub.status.busy": "2025-04-20T22:23:29.548067Z",
-     "iopub.status.idle": "2025-04-20T22:24:02.640774Z",
-     "shell.execute_reply": "2025-04-20T22:24:02.639106Z",
-     "shell.execute_reply.started": "2025-04-20T22:23:29.548499Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from train_cnn import train\n",
     "\n",
-    "train(\"../data/current/train-5k.csv\", epochs=5)"
+    "# train(\"../data/current/train-5k.csv\", epochs=50)\n",
+    "train(\"../data/current/train-first-200k-from-1-mil.csv\", epochs=50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-20T22:24:13.078941Z",
-     "iopub.status.busy": "2025-04-20T22:24:13.078438Z",
-     "iopub.status.idle": "2025-04-20T22:25:14.468313Z",
-     "shell.execute_reply": "2025-04-20T22:25:14.467011Z",
-     "shell.execute_reply.started": "2025-04-20T22:24:13.078899Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from test_cnn import test\n",
     "\n",
     "test(\"../data/current/test-200k.csv\")"
@@ -89,15 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-20T17:06:04.310835Z",
-     "iopub.status.busy": "2025-04-20T17:06:04.310489Z",
-     "iopub.status.idle": "2025-04-20T17:06:04.337670Z",
-     "shell.execute_reply": "2025-04-20T17:06:04.336208Z",
-     "shell.execute_reply.started": "2025-04-20T17:06:04.310810Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"OK\")"
