--- a/5-day-gen-ai-local.ipynb
+++ b/5-day-gen-ai-local.ipynb
@@ -19,9 +19,11 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from train_cnn import train\n",
     "\n",
-    "train(\"../data/current/train-5k.csv\", epochs=5)"
+    "train(\"../data/current/train-first-200k-from-1-mil.csv\", epochs=50)"
    ]
   },
   {
@@ -30,9 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "from test_cnn import test\n",
     "\n",
-    "test(\"../data/current/test-200k.csv\")"
+    "test(\"../data/current/test-5k.csv\")\n",
+    "# test(\"../data/current/test-200k.csv\")"
    ]
   },
   {
